rendering + client events + GraalJS dep